# dynamic-pricing-engine

./: .gitignore  Makefile  README.md  pyproject.toml  requirements.txt  streamlit_app.py
notebooks/: 01_eda_and_story.ipynb  02_price_elasticity_bayesian.ipynb  03_contextual_bandits.ipynb  04_reinforcement_learning.ipynb
src/: __init__.py
src/data/: __init__.py  loader.py  preprocessing.py
src/models/: __init__.py  bandits.py  elasticity.py  rl_agent.py
src/simulation/: __init__.py  environment.py
src/visualization/: __init__.py  plots.py
tests/: __init__.py
