[tool.poetry]
name = "dynamic-pricing-engine"
version = "0.1.0"
description = "Dynamic Pricing Engine for Ride-Sharing - Surge Pricing Analysis"
authors = ["Arnaud"]
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.11,<3.13"
pandas = "^2.0"
numpy = ">=1.24,<2.4"
matplotlib = "^3.7"
seaborn = "^0.12"
pymc = "^5.10"
arviz = ">=0.18"
scikit-learn = "^1.3"
scipy = ">=1.11,<1.15"
jupyter = "^1.0"
ipykernel = "^6.25"
pyarrow = "^22.0.0"
streamlit = "^1.40"

[tool.poetry.group.dev.dependencies]
pytest = "^7.4"
black = "^23.0"
ruff = "^0.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
